<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GovernmentActivity" >

    <TextView
        android:id="@+id/cityHallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="@string/cityHall"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="launchCityHallMaps"
        android:background="@drawable/text" />

    <TextView
        android:id="@+id/cityHallInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/cityHall"
        android:clickable="true"
        android:onClick="launchCityHallMaps"
        android:background="@drawable/text" />

    <Button
        android:id="@+id/cityHallCallButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/btn"
        android:onClick="callCityHall"
        android:text="@string/cityHall_call" />

    <TextView
        android:id="@+id/courthouseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/courthouse"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="launchCourthouseMaps"
        android:background="@drawable/text" />

    <TextView
        android:id="@+id/courthouseInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingBottom="5dp"
        android:text="@string/courthouse"
        android:clickable="true"
        android:onClick="launchCourthouseMaps"
        android:background="@drawable/text" />

    <Button
        android:id="@+id/courthouseCallButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/btn"
        android:onClick="callCourthouse"
        android:text="@string/courthouse_call" />

    <TextView
        android:id="@+id/localGovtOfficeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/localGovtOffice"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="launchLocalGovtOfficeMaps"
        android:background="@drawable/text" />

    <TextView
        android:id="@+id/localGovtOfficeInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingBottom="5dp"
        android:text="@string/localGovtOffice"
        android:clickable="true"
        android:onClick="launchLocalGovtOfficeMaps"
        android:background="@drawable/text" />

    <Button
        android:id="@+id/localGovtOfficeCallButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/btn"
        android:onClick="callLocalGovtOffice"
        android:text="@string/localGovtOffice_call" />

</LinearLayout>